# sampvoice-clients

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
client/: CMakeLists.txt  Network.cpp  Plugin.cpp  PluginMenu.h  SpeakerList.cpp
client/include/samp/: AimStuff.cpp  AimStuff.h  CActor.cpp  CActor.h  CActorPool.cpp  CActorPool.h  CAudio.cpp  CAudio.h  CAudioStream.cpp  CAudioStream.h  CCameraSA.cpp  CCameraSA.h  CChat.cpp  CChat.h  CChatBubble.cpp  CChatBubble.h  CConfig.cpp  CConfig.h  CDeathWindow.cpp  CDeathWindow.h  CDialog.cpp  CDialog.h  CEntitySA.cpp  CEntitySA.h  CFont.cpp  CFont.h  CFonts.cpp  CFonts.h  CGameSA.cpp  CGameSA.h  CGangZonePool.cpp  CGangZonePool.h  CHelpDialog.cpp  CHelpDialog.h  CHttpClient.cpp  CHttpClient.h  CInput.cpp  CInput.h  CLabel.cpp  CLabel.h  (+68 more)
client/include/util/: GameUtil.cpp  Samp.cpp
common/: common.h
